--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,32 @@
 @font-face {
-	font-family: 'Gilroy';
-	src: url('../fonts/TTFirsNeue-Regular.woff2') format('woff2');
-	font-display: swap;
-	font-weight: 400;
-	font-style: normal;
+  font-family: "Gilroy";
+  src: url("../fonts/TTFirsNeue-Regular.woff2") format("woff2");
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: 'Gilroy';
-  src: url('../fonts/TTFirsNeue-Bold.woff2') format('woff2');
-	font-display: swap;
-	font-weight: 700;
-	font-style: normal;
+  font-family: "Gilroy";
+  src: url("../fonts/TTFirsNeue-Bold.woff2") format("woff2");
+  font-display: swap;
+  font-weight: 700;
+  font-style: normal;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	margin: 0;
-  font-family: 'Gilroy', sans-serif;
+  margin: 0;
+  font-family: "Gilroy", sans-serif;
   min-width: 1333px;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .site {
@@ -76,7 +76,7 @@ img {
   z-index: 5;
   padding-top: 55px;
   padding-bottom: 47px;
-  border-bottom: 2px solid #C4C4C4;
+  border-bottom: 2px solid #c4c4c4;
 }
 
 .header::after {
@@ -139,7 +139,7 @@ img {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .nav__link:not(:last-child) {
@@ -175,7 +175,7 @@ img {
   font-weight: 700;
   font-size: 80px;
   line-height: 103px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .hero__descr {
@@ -184,7 +184,7 @@ img {
   font-weight: 400;
   font-size: 40px;
   line-height: 52px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .hero__btn {
@@ -208,7 +208,7 @@ img {
   width: 843px;
   height: 504px;
   background: #000000;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
   padding-left: 40px;
   padding-right: 26px;
   padding-bottom: 55px;
@@ -223,13 +223,13 @@ img {
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   width: 100%;
 }
 
 .photos__author a {
-  border-bottom: 1px solid #FFFFFF;
+  border-bottom: 1px solid #ffffff;
 }
 
 .photos__head {
